@@ -13,7 +13,7 @@
 		<languageKey index="de" type="array">
 			<label index="pi1_title">Dateiliste</label>
 			<label index="pi1_plus_wiz_description">Stellt Dateien und Ordner eines Verzeichnisses grafisch dar.</label>
-			<label index="config.noCache">Keine Cache für dieses Plugin: Bitte beachten Sie, dass es indexed_search verhindert, die Dateien zu indexieren.</label>
+			<label index="config.noCache">Dieses Plugin nicht cachen: Bitte beachten Sie, dass diese Einstellung eine Indexierung von Dateien durch indexed_search verunmöglicht.</label>
 		</languageKey>
 		<languageKey index="fr" type="array">
 			<label index="pi1_title">Liste de fichiers</label>
