@@ -7,6 +7,7 @@
 	* Got rid of the new icons and use a text instead
 	* Added link to every icon shown in frontend
 	* Corrected regular expression for file ignoring due to wrong Microsoft Windows thumbnail file check
+	* Updated language files
 
 2010-01-09  Moreno Feltscher  <moreno@luagsh.ch>
 
